--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,1 +1,11 @@
-<p>main works!</p>
+<div id="main-wrapper">
+    <mat-card appearance="outlined" id="main">
+        <mat-card-header>
+            <mat-card-title>
+                <h1>StickyHours web</h1></mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <router-outlet></router-outlet>
+        </mat-card-content>
+    </mat-card>
+</div>
