--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <form>
     <mat-form-field>
         <mat-label>Instance id</mat-label>
-        <input matInput id="instance-id">
+        <input matInput id="instance-id" [disabled]="instance" [value]="instance">
     </mat-form-field>
 
     <br>
