working login system

--- a/src/app/pages/login/dialogs/linkcode.html
+++ b/src/app/pages/login/dialogs/linkcode.html
@@ -6,5 +6,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>Ok</button>
-    <a mat-button mat-dialog-close href="{{data.url}}">Open Zermelo</a>
+    <a mat-button mat-dialog-close href="{{data.url}}" target="_blank">Open Zermelo</a>
 </mat-dialog-actions>
