--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -2,7 +2,8 @@
     <mat-card appearance="outlined" id="main">
         <mat-card-header>
             <mat-card-title>
-                <h1>Sticky Hours</h1></mat-card-title>
+                <h1>Sticky Hours</h1>
+            </mat-card-title>
         </mat-card-header>
         <mat-card-content>
             <router-outlet></router-outlet>
