--- a/src/app/pages/app-main/app-main.component.html
+++ b/src/app/pages/app-main/app-main.component.html
@@ -1,1 +1,11 @@
-<p>Funtionality comes here</p>
+<mat-form-field>
+    <mat-select [(value)]="user" placeholder="Select an user">
+
+        @for (user of users; track $index) {
+            <mat-option value="{{user.code}}">{{user.name}}</mat-option>
+        }
+        
+        <mat-option value="option2">Option 2</mat-option>
+        <mat-option value="option3">Option 3</mat-option>
+    </mat-select>
+</mat-form-field>
