--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -2,9 +2,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: calc(100% - 64px);
+    padding: 32px;
 }
 
-#main h1 {
-    align-self: center;
+#main {
+    width: 100%;
+    height: 100%;
+    max-width: max(620px, 66%);
+    
+    h1 {
+        align-self: center;
+    }
 }
