--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,14 +4,12 @@
 @use './theme-colors.scss' as theme;
 
 html {
-  @include mat.theme((color: (theme-type: light,
-        primary: theme.$primary-palette,
-        tertiary: theme.$tertiary-palette,
-        use-system-variables: true
-      ),
+  color-scheme: dark light;
+  @include mat.theme((
+      color: theme.$primary-palette,
       typography: Roboto,
       density: 0,
-    ));
+  ));
 }
 
 /* You can add global styles to this file, and also import other style files */
@@ -26,4 +24,8 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   background: var(--mat-sys-surface);
   color: var(--mat-sys-on-surface);
+}
+
+.panel mat-option.mdc-list-item--selected {
+  color-scheme: dark;
 }
