--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,3 +1,10 @@
+form {
+    display: flex;
+
+    // Explained in login.component.html
+    flex-direction: column-reverse;
+}
+
 mat-form-field {
     width: 100%;
 }
