--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -9,10 +9,6 @@
     width: 100%;
     height: 100%;
     max-width: max(620px, 66%);
-
-    h1 {
-        align-self: center;
-    }
 }
 
 mat-card-title {
@@ -26,4 +22,16 @@ mat-card-title {
         width: 100%;
     }
 
+    .mat-mdc-chip-action {
+        overflow: hidden !important;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    }
+}
+
+@media (max-width: 400px) {
+    h1 {
+        line-height: 38px;
+        margin: 16px 0;
+    }
 }
