--- a/src/app/pages/login/dialogs/instance-id.html
+++ b/src/app/pages/login/dialogs/instance-id.html
@@ -1,8 +1,6 @@
 <h2 mat-dialog-title>Finding your instance id</h2>
 <mat-dialog-content class="mat-typography">
-    <!-- TODO: write this text -->
-  <h3>Headers are possible</h3>
-  <p>Lorem ipsum dolor sit amet</p>
+  <p>Your instance id is the identifier Zermelo assigned to your school. Often you can find it by searching for "Zermelo" or something like "schedules" on your school's website. When you open that link and login, your instance id is the first part of the url after "https://". </p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>Ok</button>
