--- a/src/app/pages/login/dialogs/linkcode.html
+++ b/src/app/pages/login/dialogs/linkcode.html
@@ -1,8 +1,27 @@
 <h2 mat-dialog-title>Obtaining a linkcode</h2>
 <mat-dialog-content class="mat-typography">
-    <!-- TODO: write this text -->
-  <h3>Headers are possible</h3>
-  <p>Lorem ipsum dolor sit amet</p>
+
+  <ol>
+    <li>
+      Click on the "Open Zermelo" button to open zermelo, and login when asked. If you are a teacher, choose webapp. You should see a screen like this:
+      <img src="https://res.cloudinary.com/dvtmkwimv/image/upload/f_auto,q_auto,w_1920/Screenshot_2024-11-03_at_10-40-03_Zermelo_a911mf">
+    </li>
+    <li>
+      In the zermelo portal, click button with the settings icon in the sidebar
+      <img src="https://res.cloudinary.com/dvtmkwimv/image/upload/f_auto,q_auto,w_1920/Screenshot_2024-11-03_at_10-40-03_Zermelo_nav-settings_ckewgm">
+    </li>
+    <li>
+      In the "settings" menu, click on the button with the phone link icon as marked in the top image. This will open a popup modal with a QR code, your Zermelo instance id and your generated linkcode, like the bottom image. You can ignore the QR code. The above red-boxed text is your instance id, the lower text your linkcode. Sadly those values can not be copied so you have to type them over by yourself.
+      <div>
+        <img src="https://res.cloudinary.com/dvtmkwimv/image/upload/f_auto,q_auto,w_1920/Screenshot_2024-11-03_at_10-48-34_Zermelo_nav-settings_gxxn2r">
+        <img src="https://res.cloudinary.com/dvtmkwimv/image/upload/f_auto,q_auto,w_1920/Screenshot_2024-11-03_at_10-48-44_Zermelo_nav-settings_cuyjyf">
+      </div>
+    </li>
+    <li>
+      Close this dialog and enter the linkcode in the assigned field.
+    </li>
+  </ol>
+  
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>Ok</button>
